--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   "devDependencies": {
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "pm2": "^4.4.1",
     "prettier": "^2.1.1",
     "pretty-quick": "^3.0.0",
-    "ts-jest": "^26.3.0"
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
+  },
+  "scripts": {
+    "format:quick": "pretty-quick --staged --pattern \"**/*.{ts,tsx,json,graphql}\"",
+    "format": "prettier --write \"**/*.*(ts|tsx)\""
   }
 }
