--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,5 +16,10 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
     "winston": "^3.3.3"
-  }
+  },
+  "scripts": {
+    "build": "rm -rf ./dist && tsc -p tsconfig.build.json",
+    "start:dev": "ts-node src/main.ts"
+  },
+  "devDependencies": {}
 }
