--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,7 @@
   "name": "@gc/server",
   "version": "0.0.0",
   "description": "Google Contacts Server app",
+  "license": "UNLICENSED",
   "dependencies": {
     "@nestjs/common": "^7.4.4",
     "@nestjs/config": "^0.5.0",
