--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,13 +2,17 @@
   "name": "@gc/web",
   "version": "0.0.0",
   "description": "Google Contacts Web app",
+  "license": "UNLICENSED",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "apollo-link-persisted-queries": "^0.2.2",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-react-require": "^3.1.3",
     "cacheable-response": "^2.1.6",
+    "dayjs": "^1.8.35",
     "express": "^4.17.1",
     "grommet": "^2.15.0",
     "i18next": "^19.7.0",
@@ -20,9 +24,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
+    "@storybook/addon-links": "^6.0.21",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.0.21",
     "@types/react": "^16.9.49",
@@ -30,5 +36,14 @@
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.3",
     "webpackbar": "^4.0.0"
+  },
+  "scripts": {
+    "build": "rm -rf ./dist && NODE_ENV=production next build && tsc --project tsconfig.server.json",
+    "types:generate": "apollo client:codegen --target=typescript --localSchemaFile=./schema.json --globalTypesFile=./src/__generated__/globalTypes.ts",
+    "schema:download:server": "bash -c 'apollo schema:download --endpoint $0'",
+    "schema:download": "yarn schema:download:server http://localhost:3090/graphql",
+    "start:dev": "cross-env nodemon",
+    "start": "NODE_ENV=production cross-env node dist/server/index.js",
+    "storybook": "start-storybook -p 6006"
   }
 }
