--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,11 +28,13 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
-    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addons": "^5.3.19",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^6.0.21",
+    "@storybook/react": "^5.3.19",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.1.0",
+    "fork-ts-checker-webpack-plugin": "^5.1.0",
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.3",
     "webpackbar": "^4.0.0"
