--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,11 +4,8 @@
   "description": "Google Contacts Web app",
   "license": "UNLICENSED",
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@apollo/react-ssr": "^4.0.0",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
-    "apollo-link-persisted-queries": "^0.2.2",
+    "@apollo/client": "^3.1.4",
+    "@apollo/link-persisted-queries": "^1.0.0-beta.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-react-require": "^3.1.3",
     "cacheable-response": "^2.1.6",
@@ -16,6 +13,7 @@
     "express": "^4.17.1",
     "grommet": "^2.15.0",
     "i18next": "^19.7.0",
+    "isomorphic-unfetch": "^3.0.0",
     "keyv": "^4.0.1",
     "next": "^9.5.3",
     "next-i18next": "^6.0.2",
@@ -44,8 +42,8 @@
     "types:generate": "apollo client:codegen --target=typescript --localSchemaFile=./schema.json --globalTypesFile=./src/__generated__/globalTypes.ts",
     "schema:download:server": "bash -c 'apollo schema:download --endpoint $0'",
     "schema:download": "yarn schema:download:server http://localhost:3090/graphql",
-    "start:dev": "cross-env nodemon",
-    "start": "NODE_ENV=production cross-env node dist/server/index.js",
+    "start:dev": "nodemon",
+    "start": "NODE_ENV=production node dist/server/server/index.js",
     "storybook": "start-storybook -p 6006"
   }
 }
