--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     }
   },
   "devDependencies": {
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "jest-watch-typeahead": "^0.6.1",
     "pm2": "^4.4.1",
     "prettier": "^2.1.1",
     "pretty-quick": "^3.0.0",
