--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,13 +11,10 @@
     "cacheable-response": "^2.1.6",
     "dayjs": "^1.8.35",
     "express": "^4.17.1",
-    "grommet": "^2.15.0",
-    "i18next": "^19.7.0",
     "isomorphic-unfetch": "^3.0.0",
     "keyv": "^4.0.1",
     "next": "^9.5.3",
-    "next-i18next": "^6.0.2",
-    "next-transpile-modules": "^4.1.0",
+    "next-react-svg": "^1.1.2",
     "polished": "^3.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -29,10 +26,17 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.19",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.3",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "eslint-plugin-react": "^7.20.6",
     "fork-ts-checker-webpack-plugin": "^5.1.0",
+    "jest-styled-components": "^7.0.3",
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.3",
     "webpackbar": "^4.0.0"
@@ -44,6 +48,7 @@
     "schema:download": "yarn schema:download:server http://localhost:3090/graphql",
     "start:dev": "nodemon",
     "start": "NODE_ENV=production node dist/server/server/index.js",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "test": "jest"
   }
 }
