--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.4.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.1",
+    "jsonwebtoken": "^8.5.1",
     "nest-winston": "^1.3.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "supertest": "^4.0.2"
   }
 }
