--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "@nestjs/platform-express": "^7.4.4",
     "apollo-server-express": "^2.17.0",
     "cookie": "^0.4.1",
+    "form-data": "^3.0.0",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.1",
     "jsonwebtoken": "^8.5.1",
