--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-infinite-scroll-hook": "^3.0.0",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.2.0",
     "universal-cookie": "^4.0.3"
